feat(CrewService): 크루들을 관리하는 서비스 생성
- Crews에서 Shuffle해서 반환하던 것을 서비스에서 실행하도록 수정