@@ -2,8 +2,6 @@ package pairmatching.domain.crew;
 
 import camp.nextstep.edu.missionutils.Randoms;
 
-import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -15,10 +13,9 @@ public class Crews {
         this.value = value.stream()
                 .map(Crew::new)
                 .collect(Collectors.toList());
-
     }
 
-    public Collection<Crew> shuffleCrew() {
-        return Collections.unmodifiableList(Randoms.shuffle(value));
+    public List<Crew> getValue() {
+        return List.copyOf(value);
     }
 }
